--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
       <nav class="navbar">
         <div class="navbar__brand">
-           <img src="assets/logo.png" alt="logo" class="navbar__logo">
+           <img src="assets/logo2.jpg" alt="logo" class="navbar__logo">
         </div>
         <div class="navbar__nav__items">
           <button class="button__primary">Order Food</button>
